examples/test/testpolicy17979.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17979
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key10: value0
      key18: value48
      key42: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value1
          key35: value13
      podSelector:
        matchLabels:
          key12: value18
